[gd_scene load_steps=5 format=3 uid="uid://b1onmlb7q1p7b"]

[ext_resource type="Script" uid="uid://b3k06xyyh7u7r" path="res://Scripts/UI/game_over.gd" id="1_jxkuk"]
[ext_resource type="Texture2D" uid="uid://fhj0ckg2m2xe" path="res://Assets/periodicos/BAD ENDING.png" id="2_jqelu"]
[ext_resource type="Texture2D" uid="uid://173gtcp8kfcu" path="res://Assets/periodicos/2.png" id="2_w88jv"]
[ext_resource type="Texture2D" uid="uid://dmk2pehvlv2bn" path="res://Assets/periodicos/GOOD ENDING.png" id="3_w88jv"]

[node name="game_over" type="Control"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jxkuk")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -333.0
offset_top = -68.0
offset_right = 333.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 107
text = "GAME OVER"

[node name="newspaper" type="Node2D" parent="."]

[node name="newspaper3" type="Sprite2D" parent="newspaper"]
visible = false
position = Vector2(714.99994, 321.9991)
scale = Vector2(0.2927863, 0.29278633)
texture = ExtResource("2_w88jv")

[node name="newspaper1" type="Sprite2D" parent="newspaper"]
position = Vector2(301, 320)
scale = Vector2(0.39226422, 0.3922642)
texture = ExtResource("2_jqelu")

[node name="newspaper2" type="Sprite2D" parent="newspaper"]
position = Vector2(716.21875, 320.2753)
scale = Vector2(0.39204016, 0.39204016)
texture = ExtResource("3_w88jv")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
